resources/css/claws.css
body {
    font-size: 16px;
    width: 100%;
}



/*banner*/
header {
    display: inline-block;
    width: 100%;
    height: auto;
    position: fixed;
    z-index: 99;
    border-style: solid;
    background-color: rgb(255, 246, 246);
}
header h1 {
    color: #020000;
    font-family: 'Markazi';
    font-size: 2.5rem;
    text-align: center;
}
nav a {
    text-decoration-line: none;
    padding: 10px;
    font-size: 1.5rem;
    text-align: center;
    transition-property: background-color;
    transition-duration: 100ms;
    float: right;
    overflow: hidden;
}
nav ul {
    text-align: center;
}
nav li {
    display: inline;
    transition-property: color;
    transition-duration: 100ms;
}
nav a:hover {
    background-color: #edfffb;
}

/*boss ladies intro*/

.container {
   width: 100%;
   height: 850px;
}
.inner-container{
    width: 30%;
    height: 75%;
    padding: 30px;
    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("images/josiesunshine.jpg");
    background-size: cover;
    background-position: center;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
    font-size: 2vw;
}
#circText{
    position: relative;
    color: #fff;
    border-radius: 50%;
    box-shadow: 0 0 30px rgba(0,0,0,0.15);
}
#circText span{
   position: absolute;
   transform-origin: top left;
}

/*picture display*/
img.large {
    width: auto;
}
img.mid {
    display: relative;
    width: auto;
    height: 100%;
}

/*screen size*/
@media screen and (max-width: 80%){
  .navbar a {
    float: none;
    width: 100%;
  }
}
@media screen and (min-width: 20%){
    #circText span{
        padding: 10px;
    }
}

